# c-_patterns

./: .gitignore  CMakeLists.txt  gamma_categorixation.md  main.cpp  test.cpp
libs/hello/: speaker.cpp
libs/talk/: CMakeLists.txt
src/: journal.cpp  journal.hpp  main.cpp
src/SOLID/: dependency_inversion.cpp  interface_segregation.cpp  liskov_substitution.cpp  open_closed_principle.cpp  single_responsibility.cpp
src/adapter/: adapter.hpp  adapter.md  index.hpp
src/bridge/: bridge.hpp  foo.cpp  foo.hpp  index.hpp  pimple.cpp  pimple.hpp  readme.md
src/builder/: builder.cpp  groovy_builder.cpp  index.hpp  person.cpp  person.hpp  person_address_builder.cpp  person_address_builder.hpp  person_builder.cpp  person_builder.hpp  person_job_builder.cpp  person_job_builder.hpp
src/chain_of_responsibility/: broker.hpp  index.hpp  pointer_chain.hpp  readme.md
src/command/: command.hpp  index.hpp  readme.md
src/composite/: array_backed.hpp  composite.hpp  composite.md  index.hpp  neuron.cpp  neuron.hpp  neuron_layer.hpp  some_neurons.cpp  some_neurons.hpp
src/decorator/: decorator.hpp  decorator.md  func_decorator.hpp  index.hpp
src/facade/: facade.hpp  index.hpp  readme.md
src/factory/: drink_factory.hpp  factory.cpp  factory.md  hot_drink.hpp  hot_drink_factory.hpp  index.hpp
src/flyweight/: flyweight.hpp  index.hpp  readme.md  text_format.hpp
src/hello/: CMakeLists.txt  speaker.h
src/prototype/: index.hpp  prototype.cpp  readme.md
src/proxy/: index.hpp  property_proxy.hpp  readme.md  virtual_proxy.hpp
src/singleton/: index.hpp  monostate.hpp  multiton.hpp  singleton.cpp  singleton.hpp  singleton.md
src/talk/: talker.cpp  talker.h
